welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: not found: value getMondeLongueur
var x = getMondeLongueur();
        ^